<resources>
    <string name="kr_app_name">슬기교환소</string>
    <string name="home">Home</string>
    <string name="my_page">My Page</string>
    <string name="notification">Notification</string>
    <string name="feed">Feed</string>
    <string name="kr_notification">알림</string>
    <string name="kr_feed">피드</string>
    <string name="kr_my_page">마이페이지</string>
    <string name="kr_please_enter_a_keyword">키워드를 입력해주세요.</string>
    <string name="kr_search_option">상세조건</string>
    <string name="kr_sort_by_newest">최신순</string>
    <string name="kr_sort_by_hottest">인기순</string>
    <string name="kr_sort_by_reviews">후기순</string>
    <string name="kr_write">글쓰기</string>
    <string name="kr_see_wisdom_exchange_detail">교환서 보기</string>
    <string name="kr_accept">수락하기</string>
    <string name="kr_write_evaluation">슬기 교환 후기 작성하기</string>
    <string name="kr_contact_info">연락처</string>
    <string name="kr_wisdom_exchange_request">슬기교환 요청</string>
    <string name="kr_wisdom_exchange_accept_request">슬기교환 요청 수락</string>
    <string name="kr_wisdom_exchange_request_from_me_to_other_description">nickname님에게 슬기교환을 요청했습니다. nickname님이 수락하시면 연락처가 교환됩니다.</string>
    <string name="kr_wisdom_exchange_request_from_me_to_other_accept_description">nickname님이 슬기교환 요청을 수락했습니다! 연락처가 교환되었습니다. 즐거운 슬기교환 보내세요:)</string>
    <string name="kr_wisdom_exchange_request_from_other_to_me_description">nickname님이 슬기교환을 요청했습니다! ‘수락하기’ 버튼을 누르면 연락처가 교환됩니다.</string>
    <string name="kr_wisdom_exchange_request_from_other_to_me_accept_description">nickname님의 슬기교환 요청을 수락했습니다. 연락처가 교환되었습니다. 즐거운 슬기교환 보내세요:)</string>
    <string name="kr_my_profile">내 프로필</string>
    <string name="kr_wisdom_exchange">슬기 교환서</string>
    <string name="kr_please_fill_out_the_wisdom_exchange_form">슬기 교환서를 작성해 주세요!</string>
    <string name="kr_favorite_wisdom_exchange">즐겨찾는 슬기 교환서</string>
    <string name="kr_logout">로그아웃</string>
    <string name="kr_my_wisdom">나의 슬기</string>
    <string name="kr_hope_wisdom">희망슬기</string>
    <string name="kr_exchange_reviews">교환후기</string>
    <string name="kr_hope_required">희망조건</string>
    <string name="kr_request_exchange">교환 신청하기</string>
    <string name="kr_educational_background">학력</string>
    <string name="kr_tv_career_title">경력</string>
    <string name="kr_certificate">자격증</string>
    <string name="kr_mon">월</string>
    <string name="kr_sun">일</string>
    <string name="kr_tue">화</string>
    <string name="kr_wed">수</string>
    <string name="kr_thu">목</string>
    <string name="kr_fri">금</string>
    <string name="kr_sat">토</string>
    <string name="kr_hope_days_of_the_week">희망 요일</string>
    <string name="kr_hope_area">희망 지역</string>
    <string name="kr_hope_etc">기타 희망사항</string>
    <string name="kr_can_do_by_online">온라인 슬기 교환 가능</string>
    <string name="kr_request_exchange_done">교환신청 완료!</string>
    <string name="kr_exchange_opponent">슬기 교환 대상</string>
    <string name="kr_ok">확인</string>
    <string name="kr_cancel">취소</string>
    <string name="kr_confirm">확인</string>
    <string name="kr_request_confirm_message">슬기 교환을 신청하시겠습니까?</string>
</resources>